--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,17 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
+    <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value ="AIzaSyAnYQY5-un3RZZuA9KZpP_WAVvboSN4dfw"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
@@ -29,6 +33,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".EditTripActivity" />
         <activity android:name=".TripInfoActivity" />
+        <activity android:name=".TestActivity"></activity>
     </application>
 
 </manifest>
