--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
 
     <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value ="AIzaSyAnYQY5-un3RZZuA9KZpP_WAVvboSN4dfw"/>
-
+        android:value ="AIzaSyDrAdH03bmSDeTxsSI3Qc8pvUYUny-9bs8"/>
 
     <application
         android:allowBackup="true"
@@ -29,11 +28,11 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:label="Battuta"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".EditTripActivity" />
         <activity android:name=".TripInfoActivity" />
-        <activity android:name=".TestActivity"></activity>
+        <activity android:name=".TestActivity"/>
     </application>
 
 </manifest>
