--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
-    <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value ="AIzaSyDrAdH03bmSDeTxsSI3Qc8pvUYUny-9bs8"/>
 
     <application
         android:allowBackup="true"
@@ -17,6 +15,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value ="AIzaSyDrAdH03bmSDeTxsSI3Qc8pvUYUny-9bs8"/>
+
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
@@ -33,6 +36,9 @@
         <activity android:name=".EditTripActivity" />
         <activity android:name=".TripInfoActivity" />
         <activity android:name=".TestActivity"/>
+
+
+
     </application>
 
 </manifest>
