--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -26,23 +25,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".MainActivity"
             android:label="Battuta"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".EditTripActivity" />
-        <activity android:name=".TripInfoActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAAkDFUUg1PN_ETN2_TH816Poin7oEhNRM" />
 
-
+        <activity android:name=".TripInfoActivity"
+            android:theme="@style/Theme.AppCompat.Translucent"/>
     </application>
 
 </manifest>
