--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
         <activity android:name=".EditTripActivity" />
         <activity
             android:name=".TripInfoActivity"
-            android:theme="@style/Theme.AppCompat.Translucent" />
+            android:theme="@style/Theme.AppCompat.Translucent"
+            android:excludeFromRecents="true"/>
 
         <receiver android:name=".AlarmReceiver"/>
         <receiver android:name=".BootReceiver">
