--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,10 @@ dependencies {
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.google.android.gms:play-services:10.2.0'
     compile 'com.google.firebase:firebase-database:10.2.0'
+    compile 'com.google.firebase:firebase-crash:10.2.0'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
