--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,12 @@ dependencies {
     compile 'com.google.android.gms:play-services:10.2.0'
     compile 'com.google.firebase:firebase-database:10.2.0'
     compile 'com.google.firebase:firebase-crash:10.2.0'
+    compile 'com.google.firebase:firebase-config:10.2.0'
+    compile 'com.google.firebase:firebase-auth:10.2.0'
     testCompile 'junit:junit:4.12'
 }
+
+
 
 
 
