--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppAltTheme">
         <activity
             android:name=".SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -43,7 +43,12 @@
         <activity
             android:name=".TripInfoActivity"
             android:theme="@style/Theme.AppCompat.Translucent"
-            android:excludeFromRecents="true"/>
+            android:excludeFromRecents="true"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+            </activity>
 
         <receiver android:name=".AlarmReceiver"/>
         <receiver android:name=".BootReceiver">
