--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppAltTheme">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -35,6 +35,12 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name" />
+
+        <activity
+            android:name=".SignupActivity"
+            android:label="@string/title_activity_signup"
+            android:parentActivityName=".LoginActivity" />
+
         <activity
             android:name=".MainActivity"
             android:label="Battuta"
@@ -42,15 +48,15 @@
         <activity android:name=".EditTripActivity" />
         <activity
             android:name=".TripInfoActivity"
-            android:theme="@style/Theme.AppCompat.Translucent"
             android:excludeFromRecents="true"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/Theme.AppCompat.Translucent">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"/>
-            </activity>
+                android:value=".MainActivity" />
+        </activity>
 
-        <receiver android:name=".AlarmReceiver"/>
+        <receiver android:name=".AlarmReceiver" />
         <receiver android:name=".BootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
